# gvirtus.opencl

./: config.h.in  configure.in
backend/: Makefile.am  OclHandler.cpp  OclHandler.h  OclHandler_executingKernels.cpp  OclHandler_memoryObjects.cpp  OclHandler_programObjects.cpp
frontend/: Makefile.am  OclFrontend.cpp  Ocl_clGlSharingApis.cpp  Ocl_commandQueues.cpp  Ocl_contexts.cpp  Ocl_executingKernels.cpp  Ocl_kernelObjects.cpp  Ocl_memoryObjects.cpp  Ocl_programObjects.cpp
nbproject/: project.xml
